fixed headers in offer section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">  
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 <body>
     <nav>
         <div class="container">
@@ -31,18 +34,25 @@
                     <p>Nie wierz nam na słowo - sprawdź</p>
                     <a class="landing-page-btn" href="#offer">oferta</a>
                 </div>
-            </div>    
+            </div>
         </section>
 
         <section class="about" id="about">
             <div class="container">
                 <h1>Nasi specjaliści</h1>
                 <div class="about-employee">
-                    <div class="about-employee-pic1"></div>                
+                    <div class="about-employee-pic1"></div>
                     <div class="about-employee-desc">
                         <h2>Imię i nazwisko [dział]</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas erat vel massa malesuada, a placerat enim porta. Integer suscipit turpis non nisl aliquet, eu vestibulum erat elementum. Aliquam erat volutpat. Pellentesque molestie felis ut orci mollis, sit amet eleifend lacus rhoncus. Praesent ac pharetra sem, nec finibus dolor. Mauris a feugiat lorem. Cras sit amet euismod lacus, vel volutpat urna. Integer pretium ut lorem sit amet facilisis. Vivamus auctor sed ipsum et feugiat. Mauris tincidunt tempus velit eget pretium. Sed dictum tristique nisl in hendrerit. Integer egestas varius risus vel tristique. Aliquam lorem nisi, sodales quis mauris at, dapibus pulvinar nibh.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas erat vel massa
+                            malesuada, a placerat enim porta. Integer suscipit turpis non nisl aliquet, eu vestibulum
+                            erat elementum. Aliquam erat volutpat. Pellentesque molestie felis ut orci mollis, sit amet
+                            eleifend lacus rhoncus. Praesent ac pharetra sem, nec finibus dolor. Mauris a feugiat lorem.
+                            Cras sit amet euismod lacus, vel volutpat urna. Integer pretium ut lorem sit amet facilisis.
+                            Vivamus auctor sed ipsum et feugiat. Mauris tincidunt tempus velit eget pretium. Sed dictum
+                            tristique nisl in hendrerit. Integer egestas varius risus vel tristique. Aliquam lorem nisi,
+                            sodales quis mauris at, dapibus pulvinar nibh.
                         </p>
                     </div>
                 </div>
@@ -51,7 +61,14 @@
                     <div class="about-employee-desc">
                         <h2>Imię i nazwisko [dział]</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas erat vel massa malesuada, a placerat enim porta. Integer suscipit turpis non nisl aliquet, eu vestibulum erat elementum. Aliquam erat volutpat. Pellentesque molestie felis ut orci mollis, sit amet eleifend lacus rhoncus. Praesent ac pharetra sem, nec finibus dolor. Mauris a feugiat lorem. Cras sit amet euismod lacus, vel volutpat urna. Integer pretium ut lorem sit amet facilisis. Vivamus auctor sed ipsum et feugiat. Mauris tincidunt tempus velit eget pretium. Sed dictum tristique nisl in hendrerit. Integer egestas varius risus vel tristique. Aliquam lorem nisi, sodales quis mauris at, dapibus pulvinar nibh.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent egestas erat vel massa
+                            malesuada, a placerat enim porta. Integer suscipit turpis non nisl aliquet, eu vestibulum
+                            erat elementum. Aliquam erat volutpat. Pellentesque molestie felis ut orci mollis, sit amet
+                            eleifend lacus rhoncus. Praesent ac pharetra sem, nec finibus dolor. Mauris a feugiat lorem.
+                            Cras sit amet euismod lacus, vel volutpat urna. Integer pretium ut lorem sit amet facilisis.
+                            Vivamus auctor sed ipsum et feugiat. Mauris tincidunt tempus velit eget pretium. Sed dictum
+                            tristique nisl in hendrerit. Integer egestas varius risus vel tristique. Aliquam lorem nisi,
+                            sodales quis mauris at, dapibus pulvinar nibh.
                         </p>
                     </div>
                 </div>
@@ -66,33 +83,33 @@
                 <div class="offer-service-box">
                     <div class="dot"></div>
                     <div class="offer-service-box-text">
-                        Usługa 1 
-                        <h2>(nowość)</h2>
+                        <h2>Usługa 1</h2>
+                        (nowość)
                     </div>
                 </div>
                 <div class="offer-service-box">
                     <div class="offer-service-box-text">
-                        Usługa 2
+                        <h2>Usługa 2</h2>
                     </div>
                 </div>
                 <div class="offer-service-box">
                     <div class="offer-service-box-text">
-                        Usługa 3
+                        <h2>Usługa 3</h2>
                     </div>
                 </div>
                 <div class="offer-service-box">
                     <div class="offer-service-box-text">
-                        Usługa 4
+                        <h2>Usługa 4</h2>
                     </div>
                 </div>
                 <div class="offer-service-box">
                     <div class="offer-service-box-text">
-                        Usługa 5
+                        <h2>Usługa 5</h2>
                     </div>
                 </div>
                 <div class="offer-service-box">
                     <div class="offer-service-box-text">
-                        Usługa 6
+                        <h2>Usługa 6</h2>
                     </div>
                 </div>
             </div>
@@ -108,4 +125,5 @@
         </div>
     </footer>
 </body>
+
 </html>
