addet togglebar for mobile dekstop

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <a href="#offer" class="nav-link">oferta</a>
                 <a href="#" class="nav-link-contact">kontakt</a>
             </div>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </div>
     </nav>
     <main>
@@ -124,6 +129,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
